<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BloQuery</string>
    <string name="new_bloquery">New BloQuery</string>
    <string name="answer_bloquery">Answer BloQuery</string>
    <string name="answer_hint">Enter your answer here</string>
    <string name="asks">asks...</string>

    <string name="question_posted">Question Posted</string>
    <string name="answer_added">Answer added</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="logout">Log Out</string>

    <string name="answers">answers</string>
    <string name="votes">votes</string>
    <string name="login_vote">Please login to vote</string>

    <string name="successful_login">Successfully Logged in</string>
    <string name="no_such_user">No such user. Please sign up</string>
    <string name="invalid_signup">Invalid username or password</string>
    <string name="successful_signup">Successfully signed up, please log in.</string>
    <string name="signup_error">Sign up Error</string>

    <string name="new_question_dialog">Query the community</string>
    <string name="sample">Sample:</string>
    <string name="sample_question">What is the air-speed velocity of an unladen swallow? </string>

    <string name="empty_view">Be the first to answer this question!!</string>

    <string name="really_long">this string is really long. I am going to use it for testing
    stuff where I want to see how things look when I have wrap around. For instance if I ask
    a really lonq question. What will my text view look like?</string>

    <string name="parse_app_id">s6IuCKET7FLnSFBAo8TbNZQdD6hqCB4xNbImk9YF</string>
    <string name="parse_client_key">AslQuPYBNquLYjXJaLHg3328WAhITQ2jJbi6N4BM</string>

</resources>
